src/test/ui/type/ascription/issue-54516.stderr
error: expected one of `!`, `,`, or `::`, found `(`
  --> $DIR/issue-54516.rs:4:58
   |
LL |     println!("{}", std::mem:size_of::<BTreeMap<u32, u32>>());
   |                            -                             ^ expected one of `!`, `,`, or `::`
   |                            |
   |                            help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: see issue #23416 <https://github.com/rust-lang/rust/issues/23416> for more information

error: aborting due to previous error

